--- a/.gitconfig
+++ b/.gitconfig
@@ -8,31 +8,35 @@
 [alias]
   st = status
   ci = commit
-  ca = commit -a
   co = checkout
   di = diff
   dc = diff --cached
   amend = commit --amend
   aa = add --all
+  ap = add -p
   head = !git l -1
   h = !git head
   r = !git l -20
   ra = !git r --all
+  p = push
+  pom = !git p origin master
+  u = pull
+  uom = !git u origin master
   ff = merge --ff-only
-  pullff = pull --ff-only
   noff = merge --no-ff
+  uff = !git u --ff-only
   l = log --graph --abbrev-commit --date=relative
   la = !git l --all
   div = divergence
   gn = goodness
   gnc = goodness --cached
   fa = fetch --all
-  pom = push origin master
   b = branch
   ds = diff --stat=160,120
   dh1 = diff HEAD-1
   ss = stash save
   sp = !git ss --patch
+  so = stash pop
   sdc = svn dcommit
   sfa = svn fetch --all
   sr = svn rebase
