Enable full color terminal and mouse in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,3 +9,9 @@ bind r source-file ~/.tmux.conf
 
 # shortcut for kill-session
 bind k confirm-before -p "kill-session #S? (y/n)" kill-session
+
+# full color terminal
+set -g default-terminal "screen-256color"
+
+# free the mouse
+set -g mode-mouse on
