--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,51 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
 # shortcut for kill-session
 bind k confirm-before -p "kill-session #S? (y/n)" kill-session
+
+# free the mouse
+set -g mode-mouse on
 
 # full color terminal
 set -g default-terminal "screen-256color"
 
-# free the mouse
-set -g mode-mouse on
+# status bar
+set -g status-left-length 12
+set -g status-left "[#S]"
+set -g status-right "#H"
+
+## tomorrow night color scheme
+# set status bar
+set -g status-bg "#373b41"
+set -g status-fg "#c5c8c6"
+
+# highlight active window
+setw -g window-status-current-bg "#282a2e"
+setw -g window-status-current-fg "#81a2be"
+
+# highlight activity in status bar
+setw -g window-status-activity-fg "#8abeb7"
+setw -g window-status-activity-bg "#1d1f21"
+
+# pane border and colors
+set -g pane-active-border-bg default
+set -g pane-active-border-fg "#373b41"
+set -g pane-border-bg default
+set -g pane-border-fg "#373b41"
+
+set -g clock-mode-colour "#81a2be"
+set -g clock-mode-style 24
+
+set -g message-bg "#8abeb7"
+set -g message-fg "#000000"
+
+set -g message-command-bg "#8abeb7"
+set -g message-command-fg "#000000"
+
+set -g mode-bg "#8abeb7"
+set -g mode-fg "#000000"
