--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,17 @@ bind k confirm-before -p "kill-session #S? (y/n)" kill-session
 # free the mouse
 set -g mode-mouse on
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # full color terminal
 set -g default-terminal "screen-256color"
 
