Increase tmux scrollback

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# increase scrollback
+set-option -g history-limit 6000
+
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
