Add vim JS and JSX plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,9 @@
 [submodule "vim/bundle/vim-vroom"]
 	path = vim/bundle/vim-vroom
 	url = git://github.com/skalnik/vim-vroom.git
+[submodule "vim/bundle/vim-javascript"]
+	path = vim/bundle/vim-javascript
+	url = git://github.com/pangloss/vim-javascript
+[submodule "vim/bundle/vim-jsx"]
+	path = vim/bundle/vim-jsx
+	url = git://github.com/mxw/vim-jsx.git
