Update tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,8 @@ set -g default-terminal "screen-256color"
 # status bar
 set -g status-left-length 12
 set -g status-left "[#S]"
-set -g status-right "#H"
+set -g status-right "%b %d - %-l:%M %p"
+set -g status-justify centre
 
 ## tomorrow night color scheme
 # set status bar
