--- a/bundle/config
+++ b/bundle/config
@@ -1,5 +1,6 @@
 ---
 BUNDLE_--JOBS: '3'
-BUNDLE_GEM__COC: false
-BUNDLE_GEM__MIT: false
+BUNDLE_GEM__COC: 'false'
+BUNDLE_GEM__MIT: 'false'
 BUNDLE_GEM__TEST: rspec
+BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
