Update tmux config, incl. switch to Ctrl+S

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,9 @@
-# remap prefix to Control + a
-set -g prefix C-a
+# remap prefix to Control + s
+set -g prefix C-s
 unbind C-b
-bind C-a send-prefix
+bind C-s send-prefix
+
+set -s escape-time 0
 
 # increase scrollback
 set-option -g history-limit 6000
@@ -11,14 +13,14 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+unbind ^S
+bind ^S select-pane -t :.+
 
 # shortcut for kill-session
 bind k confirm-before -p "kill-session #S? (y/n)" kill-session
 
 # free the mouse
-set -g mode-mouse on
+set -g mouse on
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
