--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,12 @@
 [submodule "vim/bundle/neomake"]
 	path = vim/bundle/neomake
 	url = git@github.com:benekastah/neomake.git
+[submodule "vim/bundle/vim-airline"]
+	path = vim/bundle/vim-airline
+	url = git@github.com:vim-airline/vim-airline.git
+[submodule "vim/bundle/tmuxline.vim"]
+	path = vim/bundle/tmuxline.vim
+	url = git@github.com:edkolev/tmuxline.vim.git
+[submodule "vim/bundle/vim-airline-themes"]
+	path = vim/bundle/vim-airline-themes
+	url = git@github.com:vim-airline/vim-airline-themes.git
