--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 set -g default-terminal "screen-256color"
 
 # status bar
+set -g status-position bottom
 set -g status-left-length 12
 set -g status-left "[#S]"
 set -g status-right "%b %d - %-l:%M %p"
