Update vim shortcuts and zsh aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ bind C-s send-prefix
 
 set -s escape-time 0
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # increase scrollback
 set-option -g history-limit 6000
 
