Source tmuxline shapshot
Snapshot generated from vim (within tmux) via

    :TmuxlineSnapshot ~/.dotfiles/tmuxline_snapshot.conf

This should only change if the tmuxline or airline configs change or if
the vim colorscheme changes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,34 +38,14 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys copy-pipe "reattach-to-user-namespace pbcopy"
 
 # full color terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # status bar
 set -g status-position bottom
-set -g status-left-length 12
-set -g status-left "[#S]"
-set -g status-right "%b %d - %-l:%M %p"
-set -g status-justify centre
-
-## tomorrow night color scheme
-# set status bar
-set -g status-style bg="#373b41",fg="#c5c8c6"
-
-# highlight active window
-setw -g window-status-current-style bg="#282a2e",fg="#81a2be"
-
-# highlight activity in status bar
-setw -g window-status-activity-style fg="#8abeb7",bg="#1d1f21"
-
-# pane border and colors
-set -g pane-active-border-style bg=default,fg="#373b41"
-set -g pane-border-style bg=default,fg="#373b41"
 
 set -g clock-mode-colour "#81a2be"
 set -g clock-mode-style 24
 
-set -g message-style bg="#8abeb7",fg="#000000"
-
-set -g message-command-style bg="#8abeb7",fg="#000000"
-
 set -g mode-style bg="#8abeb7",fg="#000000"
+
+if-shell "test -f ~/.tmuxline_snapshot.conf" "source ~/.tmuxline_snapshot.conf"
