--- a/tmux.conf
+++ b/tmux.conf
@@ -31,11 +31,6 @@ setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys copy-pipe "reattach-to-user-namespace pbcopy"
 
 # full color terminal
 set -g default-terminal "tmux-256color"
@@ -47,5 +42,8 @@ set -g clock-mode-colour "#81a2be"
 set -g clock-mode-style 24
 
 set -g mode-style bg="#8abeb7",fg="#000000"
+
+# OS-specific configurations
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux-macos.conf" "source-file ~/.tmux-linux.conf"
 
 if-shell "test -f ~/.tmuxline_snapshot.conf" "source ~/.tmuxline_snapshot.conf"
