Add a few more apps to Mackup

--- a/mackup.cfg
+++ b/mackup.cfg
@@ -3,7 +3,13 @@ engine = icloud
 
 [applications_to_sync]
 audio-hijack
+bartender
+cleanshot
+dash
 fantastical
+istat-menus
 iterm2
+loopback
+magnet
 private-configs
 shush
